--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<section id="content" class="body">
-<h1>Archives for {{ SITENAME }}</h1>
+<h1>Archives for {{ SITENAME }}</h2>
 
 <dl>
 {% for article in dates %}
-    <dt>{{ article.date.strftime('%a %d %B %Y') }}</dt>
+    <dt>{{ article.date.strftime('%Y-%m-%d %H:%M') }}</dt>
     <dd><a href='{{ article.url }}'>{{ article.title }}</a></dd>
 {% endfor %}
 </dl>
-</section>
 {% endblock %}
