--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
-{% block title %}{{ page.title }}{% endblock %}
-{% block content %}		   
-<section id="content" class="body">	   
-	<h1 class="entry-title">{{ page.title }}</h1>
-	{% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">get
-	the pdf</a>{% endif %}
-	{{ page.content }}
-</section>
+{% block title %}{{ page.title }}{%endblock%}
+{% block content %}
+    <h1>{{ page.title }}</h1>
+    {{ page.content }}
 {% endblock %}
