--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,21 +1,69 @@
 {% extends "base.html" %}
+{% block content_title %}{% endblock %}
 {% block content %}        
-<section id="content">
-{% block content_title %}
-<h2>All articles</h2>
-{% endblock %}
-
-<ol id="post-list">
+{% if articles %}
 {% for article in articles %}        
-        <li><article class="hentry">    
-                <header> <h2 class="entry-title"><a href="{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title}}">{{ article.title }}</a></h2> </header>
+    {% if loop.index == 1 %}
+        <aside id="featured" class="body"><article>
+                <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url
+                }}">{{ article.title }}</a></h1> 
                 <footer class="post-info">
-                    <abbr class="published" title="{{ article.date.isoformat() }}"> {{ article.date.strftime('%Y-%m-%d %H:%M') }} </abbr>
-                    {% if article.author %}<address class="vcard author">By <a class="url fn" href="#">{{ article.author }}</a></address>{% endif %}
+                        <abbr class="published" title="{{ article.date.isoformat() }}">
+                                {{ article.date.strftime('%a %d %B %Y') }}
+                        </abbr>
+
+                        {% if article.author %}
+                        <address class="vcard author">
+                                By <a class="url fn" href="#">{{ article.author }}</a>
+                        </address>
+                        {% endif %}
+                <p>In <a href="{{ SITEURL }}/category/{{ article.category }}.html">{{ article.category }}</a>. {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">get the pdf</a>{% endif %}</p>
+                {% include 'taglist.html' %}
                 </footer><!-- /.post-info -->
-                <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
+                {{ article.content }}
+                {% include 'comments.html' %}
+                </article>
+                </aside><!-- /#featured -->
+        {% if loop.length  > 1 %}
+            <section id="content" class="body">
+                <h1>Other articles</h1>
+                <hr />
+                    <ol id="posts-list" class="hfeed">
+        {% endif %}
+    {% else %} 
+        <li><article class="hentry">    
+                <header>
+                        <h1><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title}}">{{ article.title }}</a></h1>
+                </header>
+                
+                <div class="entry-content">
+                <footer class="post-info">
+                        <abbr class="published" title="{{ article.date.isoformat() }}">
+                                {{ article.date.strftime('%a %d %B %Y') }}
+                        </abbr>
+
+                        <address class="vcard author">
+                                By <a class="url fn" href="#">{{ article.author }}</a>
+                        </address>
+                        <p> In <a href="{{ SITEURL }}/category/{{ article.category }}.html">{{ article.category }}</a></p>
+                        {% include 'taglist.html' %}
+                    <p>{% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">pdf</a>{% endif %}</p>
+                </footer><!-- /.post-info -->
+                {{ article.summary }}
+                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
+                {% include 'comments.html' %}
+                </div><!-- /.entry-content -->
         </article></li>
+    {% endif %}
 {% endfor %}
 </ol><!-- /#posts-list -->
 </section><!-- /#content -->
+{% else %}
+<section id="content" class="body">    
+<h2>Pages</h2>
+{% for page in PAGES %}
+    <li><a href="{{ SITEURL }}/pages/{{ page.url }}">{{ page.title }}</a></li>
+{% endfor %}
+</section>
+{% endif %}
 {% endblock content %}
