--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -1203,3 +1203,15 @@ white-space: pre;
 }
 }
 
+
+
+
+/* custom */
+
+a, a:hover, label, .HSC, .index #content section.G6 h1 {
+	color: #657F08;
+}
+
+a:visited {
+	color: #B0B0B0;
+}
