--- a/theme/templates/disqus_script.html
+++ b/theme/templates/disqus_script.html
@@ -8,4 +8,7 @@
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
+<script type="text/javascript" charset="utf-8">
+	var disqus_developer = 1;
+</script>
 {% endif %}
