--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -136,6 +136,8 @@ aside, nav, article, figure {
 	display: block;
 }
 
+nav { text-transform:capitalize; }
+
 /***** Layout *****/
 .body {clear: both; margin: 0 auto; width: 800px;}
 img.right figure.right {float: right; margin: 0 0 2em 2em;}
