--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -61,7 +61,7 @@
 
 	{% if LINKS %}
 		<div class="blogroll">
-			<h2>blogroll</h2>
+			<h2>Links</h2>
 			<ul>
 			{% for name, link in LINKS %}
 			    <li><a href="{{ link }}">{{ name }}</a></li>
@@ -90,10 +90,9 @@
 
 	<footer id="contentinfo" class="body">
 		<address id="about" class="vcard body">
-		&copy; 2011 Kenneth Reitz. All rights reserved.
+		&copy; 2011 Kenneth Reitz &amp; co. .
 		</address><!-- /#about -->
 
-		<p>The blog is by <a href="http://smashingmagazine.com">Smashing Magazine</a>, thanks!</p>
 	</footer><!-- /#contentinfo -->
 
 {% include 'analytics.html' %}
