--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -101,7 +101,12 @@ dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
 
-pre{background-color: #000; padding: 10px; color: #fff; margin: 10px; overflow: auto;}
+pre{
+	background-color: #000; padding: 10px; color: #fff; margin: 10px; overflow: auto;
+	font-family: Inconsolata;
+	font-size: 13px;
+	
+}
 
 /* Quotes */
 blockquote {
