--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -23,6 +23,8 @@ body {
     margin: 0;
     padding: 0;
     text-align: left;
+    max-width: 1440px;
+    min-width: 1000px;
 }
 
 
@@ -54,9 +56,9 @@ a:link, a:visited {
 	padding: 0 1px;
 	text-decoration: underline;
 }
-a:hover, a:active {
+a:hover, a:active, a.active, .active>a {
 	background-color: #C74350;
-	color: #fff;
+	color: white;
 	text-decoration: none;
 	text-shadow: 1px 1px 1px #333;
 }
@@ -116,12 +118,12 @@ q {}
 table {margin: .5em auto 1.5em auto; width: 98%;}
 	
 	/* Thead */
-	thead th {padding: .5em .4em; text-align: left;}
-	thead td {}
+	thead th {padding: .5em .4em; text-align: left; border: thin solid grey;}
+	thead td {border: thin solid grey;}
 
 	/* Tbody */
-	tbody td {padding: .5em .4em;}
-	tbody th {}
+	tbody td {padding: .5em .4em; border: thin solid grey;}
+	tbody th {border: thin solid grey;}
 	
 	tbody .alt td {}
 	tbody .alt th {}
@@ -137,7 +139,6 @@ aside, nav, article, figure {
 }
 
 /***** Layout *****/
-.body {clear: both; margin: 0 auto; width: 800px;}
 img.right figure.right {float: right; margin: 0 0 2em 2em;}
 img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 
@@ -145,17 +146,22 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	Header
 *****************/
 #banner {
-	margin: 0 auto;
+    clear: both;
+	margin: 0 auto 0 auto;
 	padding: 2.5em 0 0 0;
 }
 
 	/* Banner */
-	#banner h1 {font-size: 3.571em; line-height: 0;}
+	#banner h1 {
+        font-size: 3.571em; 
+        line-height: 0;
+	    margin: 0 auto 0 auto;
+    }
 	#banner h1 a:link, #banner h1 a:visited {
 		color: #000305;
 		display: block;
 		font-weight: bold;
-		margin: 0 0 .6em .2em;
+		margin: 0 auto .6em auto;
 		text-decoration: none;
 		width: 427px;
 	}
@@ -175,15 +181,14 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 		line-height: 30px;
 		margin: 0 auto 2em auto;
 		padding: 0;
-		text-align: center;
-		width: 800px;
+		width: 90%;
 		
 		border-radius: 5px;
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
 	}
 	
-	#banner nav ul {list-style: none; margin: 0 auto; width: 800px;}
+	#banner nav ul {list-style: none; margin: 0 auto;}
 	#banner nav li {float: left; display: inline; margin: 0;}
 	
 	#banner nav a:link, #banner nav a:visited {
@@ -213,99 +218,90 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 /*
 	Featured
 *****************/
-#featured {
-	background: #fff;
-	margin-bottom: 2em;
-	overflow: hidden;
-	padding: 20px;
-	width: 760px;
-	
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-}
-
-#featured figure {
-	border: 2px solid #eee;
-	float: right;
-	margin: 0.786em 2em 0 5em;
-	width: 248px;
-}
-#featured figure img {display: block; float: right;}
-
-#featured h2 {color: #C74451; font-size: 1.714em; margin-bottom: 0.333em;}
-#featured h3 {font-size: 1.429em; margin-bottom: .5em;}
-
-#featured h3 a:link, #featured h3 a:visited {color: #000305; text-decoration: none;}
-#featured h3 a:hover, #featured h3 a:active {color: #fff;}
-
-/*
-	Body
-*****************/
 #content {
 	background: #fff;
-	margin-bottom: 2em;
-	overflow: hidden;
-	padding: 20px 20px;
-	width: 760px;
-	
 	border-radius: 10px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
+    float: left;
+    margin: 1em 10px 2em 7%;
+	background: #fff;
+	overflow: hidden;
+	padding: 20px 20px;
+	min-width: 600px;
+	width: 60%;
 }
 
 /*
 	Extras
 *****************/
-#extras {margin: 0 auto 3em auto; overflow: hidden;}
+#sidebar {
+    float: right; 
+    margin: 1em 7% 2em 10px;
+	background: #fff;
+	overflow: hidden;
+	padding: 20px 20px;
+	width: 15%;
+	
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+}
 
-#extras ul {list-style: none; margin: 0;}
-#extras li {border-bottom: 1px solid #fff;}
-#extras h2 {
+#sidebar ul {list-style: none; margin: 0;}
+#sidebar li {border-bottom: 1px solid #fff;}
+
+#sidebar h2 {
 	color: #C74350;
 	font-size: 1.429em;
+	margin-top: .75em;
 	margin-bottom: .25em;
 	padding: 0 3px;
 }
 
-#extras a:link, #extras a:visited {
+#sidebar a:link, #sidebar a {
 	color: #444;
 	display: block;
 	border-bottom: 1px solid #F4E3E3;
 	text-decoration: none;
 	padding: .3em .25em;
 }
+#sidebar li.active a {color: white;}
 
-#extras a:hover, #extras a:active {color: #fff;}
+#sidebar li:last-child,
+#sidebar li:last-child a {border: 0}
+
+#sidebar .blogroll li:nth-last-child(2),
+#sidebar .blogroll li:nth-last-child(3),
+#sidebar .blogroll li:nth-last-child(2) a,
+#sidebar .blogroll li:nth-last-child(3) a {border: 0;}
+
+#sidebar a:hover, #sidebar a:active {color: #fff;}
 
 	/* Blogroll */
-	#extras .blogroll {
-		float: left;
-		width: 615px;
+	#sidebar .blogroll {
+		width: 100%;
 	}
 	
-	#extras .blogroll li {float: left; margin: 0 20px 0 0; width: 185px;}
+	#sidebar .blogroll li {float: left; margin: 0 20px 0 0; width: 185px;}
 	
-	/* Social */
-	#extras .social {
-		float: right;
-		width: 175px;
-	}
 	
-	#extras div[class='social'] a {
+	.social a {
 		background-repeat: no-repeat;
 		background-position: 3px 6px;
-		padding-left: 25px;
 	}
 	
 		/* Icons */
-		.social a[href*='delicious.com'] {background-image: url('../images/icons/delicious.png');}
-		.social a[href*='digg.com'] {background-image: url('../images/icons/digg.png');}
-		.social a[href*='facebook.com'] {background-image: url('../images/icons/facebook.png');}
-		.social a[href*='last.fm'], .social a[href*='lastfm.'] {background-image: url('../images/icons/lastfm.png');}
-		.social a[href*='atom.xml'] {background-image: url('../images/icons/rss.png');}
-		.social a[href*='twitter.com'] {background-image: url('../images/icons/twitter.png');}
-		.social a[href*='linkedin.com'] {background-image: url('../images/icons/linkedin.png');}
+		.social a[href*='delicious.com']:before {content: url('../images/icons/delicious.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='digg.com']:before {content: url('../images/icons/digg.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='facebook.com']:before {content: url('../images/icons/facebook.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='atom.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='last.fm']:before, .social a[href*='lastfm.']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='jamendo.com']:before {content: url('../images/icons/jamendo.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='stackoverflow.com']:before {content: url('../images/icons/stackoverflow.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='rss.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='twitter.com']:before {content: url('../images/icons/twitter.png'); margin-right: 2px; vertical-align: -3px;}
+		.social a[href*='linkedin.com']:before {content: url('../images/icons/linkedin.png'); margin-right: 2px; vertical-align: -3px;}
 
 /*
 	About
@@ -335,7 +331,13 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 /*
 	Footer
 *****************/
-#contentinfo {padding-bottom: 2em; text-align: right;}
+#footer {
+    padding-bottom: 2em; 
+    text-align: center; 
+    clear: both; 
+    width: 80%;
+    margin: 20px auto;
+}
 
 /***** Sections *****/
 /* Blog */
