--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -5,7 +5,7 @@
 
 <dl>
 {% for article in dates %}
-    <dt>{{ article.locale_date }}</dt>
+    <dt>{{ article.date.strftime('%a %d %B %Y') }}</dt>
     <dd><a href='{{ article.url }}'>{{ article.title }}</a></dd>
 {% endfor %}
 </dl>
