--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -7,7 +7,18 @@
         rel="bookmark" title="Permalink to {{ article.title }}">{{ article.title
         }}</a></h1> {% include 'twitter.html' %} </header>
         <div class="entry-content">
-        {% include 'article_infos.html' %}
+        <footer class="post-info">
+                <abbr class="published" title="{{ article.date.isoformat() }}">
+                    {{ article.date.strftime('%a %d %B %Y') }}
+                </abbr>
+                {% if article.author %}
+                <address class="vcard author">
+                        By <a class="url fn" href="#">{{ article.author }}</a>
+                </address>
+                {% endif %}
+                <p>In <a href="{{ SITEURL }}/category/{{ article.category }}.html">{{ article.category }}</a>. 
+        {% include 'taglist.html' %}
+        </footer><!-- /.post-info -->
         {{ article.content }}
         </div><!-- /.entry-content -->
         {% if DISQUS_SITENAME %}
