--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -9,7 +9,6 @@
         <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
         {% endif %}
 
-        {% include 'skribit_tab_script.html' %}
 
         <!--[if IE]>
                 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -26,27 +25,38 @@
 <body id="index" class="home">
 {% include 'github.html' %}
         <header id="banner" class="body">
-                <h1><a href="{{ SITEURL }}">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
+                <h1><a href="{{ SITEURL }}/index.html">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
                 <nav><ul>
                 {% for title, link in MENUITEMS %}
                     <li><a href="{{ link }}">{{ title }}</a></li>
                 {% endfor %}
-                {% if DISPLAY_PAGES_ON_MENU %}
-                {% for page in PAGES %}
-                    <li><a href="{{ SITEURL }}/pages/{{ page.url }}">{{ page.title }}</a></li>
+                {% if DISPLAY_PAGES_ON_MENU != False %}
+                <li><a href="{{ SITEURL }}/index.html">Home</a></li>
+                {% for p in PAGES %}
+                    <li {% if p == page %}class="active"{% endif %}><a href="{{ SITEURL }}/pages/{{ p.url }}">{{ p.title }}</a></li>
                 {% endfor %}
                 {% endif %}
-                {% for cat, null in categories %}
+                {#{% for cat, null in categories %}
                     <li {% if cat == category %}class="active"{% endif %}><a href="{{ SITEURL }}/category/{{ cat }}.html">{{ cat }}</a></li>
-                {% endfor %}
+                {% endfor %}#}
                 </ul></nav>
         </header><!-- /#banner -->
+
         {% block content %}
         {% endblock %}
-        <section id="extras" class="body">
+
+        <aside id="sidebar">
+                <div class="widget">
+                        <h2>Categories</h2>
+                        <ul>
+                        {% for cat, null in categories %}
+                           <li {% if cat == category %}class="active"{% endif %}><a href="{{ SITEURL }}/category/{{ cat }}.html">{{ cat }}</a></li>
+                        {% endfor %}
+                        </ul>
+                </div>
         {% if LINKS %}
-                <div class="blogroll">
-                        <h2>blogroll</h2>
+                <div class="widget blogroll">
+                        <h2>Blogroll</h2>
                         <ul>
                         {% for name, link in LINKS %}
                             <li><a href="{{ link }}">{{ name }}</a></li>
@@ -54,10 +64,9 @@
                         </ul>
                 </div><!-- /.blogroll -->
         {% endif %}
-        {% include 'skribit_widget_script.html' %}
         {% if SOCIAL %}
-                <div class="social">
-                        <h2>social</h2>
+                <div class="widget social">
+                        <h2>Social</h2>
                         <ul>
                             <li><a href="{{ SITEURL }}/{{ FEED }}" rel="alternate">atom feed</a></li>
                             {% if FEED_RSS %}
@@ -70,17 +79,16 @@
                         </ul>
                 </div><!-- /.social -->
         {% endif %}
-        </section><!-- /#extras -->
+        </aside><!-- /#sidebar -->
 
-        <footer id="contentinfo" class="body">
+        <footer id="footer" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
                 </address><!-- /#about -->
 
-                <p>The theme is by <a href="http://smashingmagazine.com">Smashing Magazine</a>, thanks!</p>
-        </footer><!-- /#contentinfo -->
+                <p>The theme is «notmyidea-cms», a modified version of «notmyidea», the default theme.</p>
+        </footer><!-- /#footer -->
 
 {% include 'analytics.html' %}
-{% include 'disqus_script.html' %}
 </body>
 </html>
