--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -27,7 +27,7 @@
 <body>
 
 <div id="sidebar">
-        <h2>Kenneth Reitzs</h2>
+        <h2>{{ SITENAME }}</h2>
 
         <ul>
           <li>
@@ -49,5 +49,70 @@
         {% block content %}
         {% endblock %}
 </div>
+
+
+
+
+
+
+
+<script type="text/javascript" charset="utf-8">
+  jQuery(function($){
+    function underscore(str) {
+      return str.replace(/::/g, '/')
+                .replace(/([A-Z]+)([A-Z][a-z])/g, '$1_$2')
+                .replace(/([a-z\d])([A-Z])/g, '$1_$2')
+                .replace(/-/g, '_')
+                .toLowerCase();
+    }
+
+    function dasherize(str) {
+      return underscore(str).replace(/_/g, '-');
+    }
+
+    $("h1").each(function(){
+      var name = $(this).text();
+      $(this).attr("id", "h-" + dasherize(name));
+    });
+
+    $("h2").each(function(){
+      var name = $(this).text();
+      $(this).attr("id", "s-" + dasherize(name));
+    });
+  });
+
+  jQuery(function(){
+    // var div = $("<div />").attr("id", "sidebar");
+
+    var div = $("#sidebar");
+
+    $("h1").each(function(){
+      var link = $("<a />");
+      link.attr("href", "#" + $(this).attr("id"));
+      link.text($(this).text());
+      div.append(link);
+
+      var subs = $(this).nextUntil("h1").filter("h2");
+
+      if (subs[0]) {
+        var list = $("<ul />");
+        subs.each(function(){
+          var link = $("<a />");
+          link.text($(this).text())
+          link.attr("href", "#" + $(this).attr("id"));
+          list.append($("<li />").append(link));
+        });
+
+        div.append(list);
+      }
+    });
+
+    // $("body").prepend(div);
+    $("pre").wrapInner('<code>')
+  });
+</script>
+
+
+
 </body>
 </html>
