--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -21,7 +21,7 @@ I'm an open source software developer that loves streamlining mundane things. I 
 <p>I spend my days at <a href="">NetApp</a>, Inc writing internal enterprise tools and applications. My nights are spent passionately contributing to open source projects and hacking on what strikes my fancy. I also dabble in digital photography.</p>
 
 
-
+<pre>this.is('a' + 'test');</pre>
 
 <h2>Projects</h2>
 
