--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -27,7 +27,9 @@
 <body>
 
 <div id="sidebar">
-        <h2>{{ SITENAME }}</h2>
+        <!-- <h2>{{ SITENAME }}</h2> -->
+
+        <img alt="iA" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px">
 
         <ul>
           <li>
@@ -40,8 +42,6 @@
             <a href="/articles">Articles</a>
           </li>
         </ul>
-
-        <hr style="width:250px;"/>
 
 </div>
 
@@ -79,35 +79,10 @@
       var name = $(this).text();
       $(this).attr("id", "s-" + dasherize(name));
     });
-  });
+  });W
 
   jQuery(function(){
-    // var div = $("<div />").attr("id", "sidebar");
 
-    var div = $("#sidebar");
-
-    $("h1").each(function(){
-      var link = $("<a />");
-      link.attr("href", "#" + $(this).attr("id"));
-      link.text($(this).text());
-      div.append(link);
-
-      var subs = $(this).nextUntil("h1").filter("h2");
-
-      if (subs[0]) {
-        var list = $("<ul />");
-        subs.each(function(){
-          var link = $("<a />");
-          link.text($(this).text())
-          link.attr("href", "#" + $(this).attr("id"));
-          list.append($("<li />").append(link));
-        });
-
-        div.append(list);
-      }
-    });
-
-    // $("body").prepend(div);
     $("pre").wrapInner('<code>')
   });
 </script>
