--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -31,7 +31,7 @@
 
         <img alt="iA" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px">
 
-        <ul>
+        <ul style="margin: 10px 18px;">
           <li>
             <a href="/about">Colophon</a>
           </li>
@@ -79,7 +79,7 @@
       var name = $(this).text();
       $(this).attr("id", "s-" + dasherize(name));
     });
-  });W
+  });
 
   jQuery(function(){
 
