--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -29,9 +29,9 @@
 <div id="sidebar">
         <!-- <h2>{{ SITENAME }}</h2> -->
 
-        <img alt="iA" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px">
+        <img alt="iA" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px; margin-bottom: 10px;">
 
-        <ul style="margin: 10px 18px;">
+        <ul>
           <li>
             <a href="/about">Colophon</a>
           </li>
@@ -43,6 +43,24 @@
           </li>
         </ul>
 
+        <h3>Recent Articles</h3>
+
+        <ul>
+          <li><a>Some Post Name</a></li>
+          <li><a>Some Post Name</a></li>
+          <li><a>Some Post Name</a></li>
+          <li><a>Some Post Name</a></li>
+        </ul>
+
+
+        <h3>Get in Touch</h3>
+
+        <ul>
+          <li><a>Email</a></li>
+          <li><a>GitHub</a></li>
+          <li><a>Twitter</a></li>
+          <li><a>Flickr</a></li>
+        </ul>
 </div>
 
 <div id="container">
