--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -30,7 +30,7 @@
 <div id="sidebar">
         <!-- <h2>{{ SITENAME }}</h2> -->
 
-        <img alt="iA" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px; margin-bottom: 10px;">
+        <a href="/"><img alt="Kenneth Reitz" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px; margin-bottom: 10px;"></a>
 
         <div style="margin-left: 30px; margin-bottom: 30px; line-height: 13px;">
             <a href="/about">Colophon</a>
