--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -4,10 +4,30 @@
 <h1>Archives for {{ SITENAME }}</h1>
 
 <dl>
-{% for article in dates %}
-    <dt>{{ article.locale_date }}</dt>
-    <dd><a href='{{ article.url }}'>{{ article.title }}</a></dd>
-{% endfor %}
+  {% set current_year = 0 %}
+  {% set in_list = False %}
+
+  {% for article in dates|reverse %}
+
+      {% if article.date.year != current_year %}
+
+        {% if in_list %}
+          </ul>
+        {% endif %}
+
+        <h2>{{ article.date.year }}</h2>
+        {% set current_year = article.date.year %}
+        {% set in_list = True %}
+        <ul>
+
+      {% endif %}
+
+      <li>
+        <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"title="Permalink to {{ article.title}}">{{ article.title }}</a>
+      </li>
+
+
+  {% endfor %}
 </dl>
 </section>
 {% endblock %}
