--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -40,7 +40,7 @@
 
   <h3>Recent Articles</h3>
 
-  <ul>
+  <ul style="text-indent: -10px;">
     {% for article in (dates|reverse|list)[0:5] %}
       {% if not article.project %}
 
