--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -9,48 +9,17 @@
 I'm an open source software developer that loves streamlining mundane things. I see beauty in elegant architectures. I try to write the simplest APIs possible, and I do so with Python.</p>
 
 <p>
-  <strong>Profiles:</strong>
-  Follow me on <a href="#">Twitter</a>.
-  See my <a href="">my photos</a>.
-  Or check out my <a href="">source code</a>.
+  The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
 </p>
-
-
-<p>The Changelog. GitHub reflog.</p>
 
 <p>I spend my days at <a href="">NetApp</a>, Inc writing internal enterprise tools and applications. My nights are spent passionately contributing to open source projects and hacking on what strikes my fancy. I also dabble in digital photography.</p>
 
-
-<pre>this.is('a' + 'test');</pre>
-
-<h2>Projects</h2>
-
-<p>I've written a number of popular open source libraries:</p>
-
-<ul>
-
-    {% for link in PROJECTS %}
-        <li>
-            <a href="{{ link[1] }}" style="text-decoration: none;">
-                <strong>{{ link[0] }}</strong>: {{ link[2] }}
-            </a>
-        </li>
-    {% endfor %}
-    <li><strong>Etc</strong>: Many More</li>
-</ul>
-
-<p>
-  The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my software.
-</p>
+<p>I occasionally cohost <a href="http://thechangelog.com">The Changelog</a> and write a weekly blog post for <a href="https://github.com/blog>">The GitHub Blog</a>.</p>
 
 
 <h1>Articles</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. </p>
+<p> </p>
 
 
     {% set current_year = 0 %}
