--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -29,7 +29,7 @@
 
 <div id="sidebar">
 
-  <a href="/"><img alt="Kenneth Reitz" src="http://kennethreitz.com/kr.gif" class="firstChild lastChild" style="margin-top: 10px; margin-bottom: 10px; margin-left: -60px;"></a>
+  <a href="/"><img alt="Kenneth Reitz" src="{{ SITEURL }}/theme/kr.gif" class="firstChild lastChild" style="margin-top: 10px; margin-bottom: 10px; margin-left: -60px;"></a>
 
   <div style="margin-bottom: 30px; line-height: 13px;">
     {% for link in LINKS %}
