--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -14,15 +14,13 @@ I'm an open source software developer that loves streamlining mundane things. I 
 
 <p>I spend my days at <a href="">NetApp</a>, Inc writing internal enterprise tools and applications. My nights are spent passionately contributing to open source projects and hacking on what strikes my fancy. I also dabble in digital photography.</p>
 
-<p>I occasionally cohost <a href="http://thechangelog.com">The Changelog</a> and write a weekly blog post for <a href="https://github.com/blog>">The GitHub Blog</a>.</p>
+<p>I occasionally cohost <a href="http://thechangelog.com">The Changelog</a> and write a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a>.</p>
 
 
 <h1>Articles</h1>
 
-<p> </p>
 
-
-    {% set current_year = 0 %}
+  {% set current_year = 0 %}
   {% set in_list = False %}
 
   {% for article in dates|reverse %}
