--- a/theme/templates/github.html
+++ b/theme/templates/github.html
@@ -1,5 +1,13 @@
-{% if GITHUB_URL %}
-<a href="{{ GITHUB_URL }}">
-<img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
-</a>
+{% if article|default(False) %}
+
+    <a href="{{ article.gh|default(GITHUB_URL) }}">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
+    </a>
+
+{% elif GITHUB_URL %}
+
+    <a href="{{ GITHUB_URL }}">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
+    </a>
+
 {% endif %}
