--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -12,7 +12,7 @@ I'm an open source software developer that loves streamlining mundane things. I 
   The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
 </p>
 
-<p>I spend my days at <a href="">NetApp</a>, Inc writing internal enterprise tools and applications. My nights are spent passionately contributing to open source projects and hacking on what strikes my fancy. I also dabble in digital photography.</p>
+<p>I spend my days at <a href="http://netapp.com">NetApp, Inc</a> writing internal enterprise tools and applications. My nights are spent passionately contributing to open source projects and hacking on what strikes my fancy. I also dabble in digital photography.</p>
 
 <p>I occasionally cohost <a href="http://thechangelog.com">The Changelog</a> and write a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a>.</p>
 
