--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -6,15 +6,16 @@
   </strong>
 </p>
 <p>
-I'm an open source software developer that loves streamlining mundane things. I see beauty in elegant architectures. I try to write the simplest APIs possible, and I do so with Python.</p>
+I'm an open source software developer that loves streamlining mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.</p>
 
 <p>
   The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
 </p>
 
-<p><!-- I spend my days at <a href="http://arc90.com"Arc90</a>, working on the <a href="http://readability.com">Readability</a>. --> My nights are spent passionately contributing to open source projects and hacking on what strikes my fancy. I also dabble in <a href="http://flickr.com/photos/kennethreitz/">digital photography</a>.</p>
+<p>I author a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a> and occasionally cohost <a href="http://thechangelog.com">The Changelog</a>.</p>
 
-<p>I occasionally cohost <a href="http://thechangelog.com">The Changelog</a> and write a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a>.</p>
+<p>I (will soon) spend my days at <a href="http://arc90.com">Arc90</a>, making <a href="http://readability.com">Readability</a> awesome. My nights are spent passionately contributing to open source projects and hacking on a upcoming software products. For times away from the machine, I also enjoy <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a>.</p>
+
 
 
 <h1>Articles</h1>
