--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -6,7 +6,7 @@
   </strong>
 </p>
 <p>
-I'm an open source software developer that loves streamlining mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.</p>
+I'm an open source software architect that loves to streamline mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.</p>
 
 <p>
   The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
