--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -82,13 +82,14 @@
 
 
 
+{% include 'github.html' %}
 
-<div id="container">
-  {% include 'github.html' %}
+<article id="container">
 
   {% block content %}
   {% endblock %}
-</div>
+
+</article>
 
 
 
