--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -27,7 +27,7 @@
 <body>
 
 
-<div id="sidebar">
+<aside id="sidebar">
 
   <a href="/"><img alt="Kenneth Reitz" src="{{ SITEURL }}/theme/kr.gif" class="firstChild lastChild" style="margin-top: 10px; margin-bottom: 10px; margin-left: -60px;"></a>
 
@@ -77,14 +77,14 @@
   {% endfor %}
   </ul>
 
-</div>
+</aside>
 
 
 
 
 {% include 'github.html' %}
 
-<article id="container">
+<article id="container" class="hentry">
 
   {% block content %}
   {% endblock %}
