--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -9,7 +9,8 @@
 
 
         <div style="float:right">
-          <div class='rdbWrapper' data-show-send-to-kindle="0" data-show-read="1"></div><script type='text/javascript'>
+          <div class='rdbWrapper'></div>
+          <script type='text/javascript'>
             (function() {
             var s     = document.getElementsByTagName('script')[0],
                 rdb   = document.createElement('script');
@@ -19,7 +20,6 @@
             s.parentNode.insertBefore(rdb, s);
             })();
         </script>
-        </div>
 
         <div style="clear: both;"></div>
 
