--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -20,6 +20,7 @@
             s.parentNode.insertBefore(rdb, s);
             })();
         </script>
+        </div>
 
         <div style="clear: both;"></div>
 
