--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -9,7 +9,7 @@
 
 
         <div style="float:right">
-          <div class='rdbWrapper'></div>
+          <div class='rdbWrapper' style="width: 170px;"></div>
           <script type='text/javascript'>
             (function() {
             var s     = document.getElementsByTagName('script')[0],
