--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -12,7 +12,7 @@ I'm an open source software architect that loves to streamline mundane things. I
   The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
 </p>
 
-<p>I spend my days at <a href="http://arc90.com">Arc90, Inc</a>, making <a href="http://readability.com">Readability</a> awesome. My nights are spent passionately contributing to open source projects and hacking on upcoming software products. For times away from the machine, I also enjoy <a href="http://www.flickriver.com/photos/kennethreitz/popular-interesting/">digital photography</a>.</p>
+<p>I spend my days at <a href="http://arc90.com">Arc90, Inc</a>, making <a href="http://readability.com">Readability</a> awesome. My nights are spent passionately contributing to open source projects and hacking on upcoming software products. For times away from the machine, I also enjoy <a href="http://photos.kennethreitz.com/">digital photography</a>.</p>
 
 <p>I author a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a>.</p>
 
