--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
   <link rel="stylesheet" href="{{ SITEURL }}/theme/site.css" type="text/css" />
   <link rel="stylesheet" href="{{ SITEURL }}/theme/highlight.css" type="text/css" />
 
