no readability on mobile

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -3,7 +3,7 @@
 {% block content %}
         <h1 class="entry-title"> {{ article.title }} </h1>
 
-        <div style="float:left;">
+        <div style="float:left;" class='infos'>
           {% include 'article_infos.html' %}
         </div>
 
