--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -8,7 +8,7 @@
         </div>
 
 
-        <div style="float:right">
+        <div style="float:right" class'rdd'>
           <div class='rdbWrapper' style="width: 170px;"></div>
           <script type='text/javascript'>
             (function() {
