--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -12,7 +12,7 @@ I'm an open source software architect that loves to streamline mundane things. I
   The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
 </p>
 
-<p>I spend my days at <a href="http://heroku.com">Heroku</a>, making Python awesome. My nights are spent passionately contributing to open source projects and hacking on upcoming software products. For times away from the machine, I also enjoy <a href="http://photos.kennethreitz.com/">digital photography</a>.</p>
+<p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and hacking on upcoming software products. For times away from the machine, I also enjoy <a href="http://photos.kennethreitz.com/">digital photography</a>.</p>
 
 <p>I author a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a>.</p>
 
@@ -40,7 +40,7 @@ I'm an open source software architect that loves to streamline mundane things. I
       {% endif %}
 
       <li>
-        <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"title="Permalink to {{ article.title}}">{{ article.title }}</a>
+        <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title}}">{{ article.title }}</a>
       </li>
 
     {% endif %}
