I work for heroku

--- a/theme/templates/index-content.html
+++ b/theme/templates/index-content.html
@@ -3,18 +3,25 @@
 <p>
   <strong>
     My name is Kenneth Reitz.
+      <span class="heroku">
+        I work for Heroku.
+      </span>
   </strong>
+
 </p>
 <p>
-I'm an open source software architect that loves to streamline mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.</p>
-
-<p>
-  The US Library of Congress, Twitter, Digg, Northrop Gruman, National Geographic, and Discovery Channel use my open source software.
+  I'm an open source software architect that loves to streamline mundane things. I see beauty in elegant architectures. I strive to write the simplest APIs possible, and I do so with Python.
 </p>
 
-<p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and hacking on upcoming software products. For times away from the machine, I also enjoy <a href="http://photos.kennethreitz.com/">digital photography</a>.</p>
+<p>
+  I'm the author of <a href="http://python-requests.org">Requests</a>, Python HTTP for Humans.
+</p>
 
-<p>I author a weekly blog post for <a href="https://github.com/blog">The GitHub Blog</a>.</p>
+<p>My days are spent on the technical design of Heroku's Python Stack. My nights are spent passionately contributing to open source projects and the Python community. I curate the <a href="https://github.com/blog">GitHub Reflog</a>, a semi-periodic chronicle of awesome open source repos.</p>
+
+<p>
+   I also enjoy <a href="http://photos.kennethreitz.com/">digital photography</a>.
+</p>
 
 <h1>Articles</h1>
 
